背景动画由枫叶修改为星空，并修复一些问题

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -150,6 +150,7 @@ blockquote {
 }
 
 .modal-content {
+  background-color: #070f305e;
   -webkit-border-radius: 0 !important;
   -moz-border-radius: 0 !important;
   border-radius: 0 !important;
